--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,25 @@ keywords = ["finance", "deribit", "trading", "api", "http"]
 categories = ["finance", "api-bindings", "web-programming::http-client"]
 
 [dependencies]
-#deribit-base = { path = "../deribit-base" }
-deribit-base = "0.1"
-reqwest = { version = "0.12", features = ["json"] }
+deribit-base = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+async-trait = { workspace = true }
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+rand = { workspace = true }
+base64 = { workspace = true }
+chrono = { workspace = true }
+
+
+[workspace.dependencies]
+deribit-base = { path = "../deribit-base" }
+#deribit-base = "0.1"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 async-trait = "0.1"
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+rand = "0.9"
+base64 = "0.22"
+chrono = { version = "0.4", features = ["serde"] }
