--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,12 @@ tracing-subscriber = { workspace = true }
 rand = { workspace = true }
 base64 = { workspace = true }
 chrono = { workspace = true }
+reqwest = { workspace = true }
+tokio = { workspace = true }
+thiserror = { workspace = true }
+url = { workspace = true }
+hmac = { workspace = true }
+sha2 = { workspace = true }
 
 
 [workspace.dependencies]
@@ -34,3 +40,9 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 rand = "0.9"
 base64 = "0.22"
 chrono = { version = "0.4", features = ["serde"] }
+reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
+tokio = { version = "1.0", features = ["full"] }
+thiserror = "1.0"
+url = "2.4"
+hmac = "0.12"
+sha2 = "0.10"
