--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ thiserror = { workspace = true }
 url = { workspace = true }
 hmac = { workspace = true }
 sha2 = { workspace = true }
+urlencoding = { workspace = true }
 
 
 [workspace.dependencies]
@@ -46,3 +47,4 @@ thiserror = "1.0"
 url = "2.4"
 hmac = "0.12"
 sha2 = "0.10"
+urlencoding = "2.1"
