--- a/examples/error_handling/Cargo.toml
+++ b/examples/error_handling/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "basic"
+name = "error_handling"
 version = "0.1.0"
 edition = "2024"
 
@@ -9,4 +9,3 @@ deribit-base = { workspace = true }
 deribit-http = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
-tracing-subscriber = { workspace = true }
