--- a/examples/market_data/Cargo.toml
+++ b/examples/market_data/Cargo.toml
@@ -1,12 +1,11 @@
 [package]
-name = "basic"
+name = "market_data"
 version = "0.1.0"
 edition = "2024"
-
+publish = false
 
 [dependencies]
 deribit-base = { workspace = true }
 deribit-http = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
-tracing-subscriber = { workspace = true }
