"Add `tracing-subscriber` dependency to examples and remove unused `deribit-base` dependency"

--- a/examples/position_management/Cargo.toml
+++ b/examples/position_management/Cargo.toml
@@ -3,9 +3,8 @@ name = "position_management"
 version = "0.1.0"
 edition = "2024"
 
-
 [dependencies]
-deribit-base = { workspace = true }
 deribit-http = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
+tracing-subscriber = { workspace = true }
