--- a/examples/error_handling/Cargo.toml
+++ b/examples/error_handling/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 
 [dependencies]
-deribit-base = { workspace = true }
 deribit-http = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
+tracing-subscriber = { workspace = true }
