--- a/examples/basic/Cargo.toml
+++ b/examples/basic/Cargo.toml
@@ -9,3 +9,4 @@ deribit-http = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
 tracing-subscriber = { workspace = true }
+dotenv = "0.15.0"
