"Add public endpoints for index prices, book summaries, instruments, and server time; refine existing error messages and introduce comprehensive endpoint documentation"

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["finance", "api-bindings", "web-programming::http-client"]
 
 [workspace]
 members = [
-    "examples/basic",
+    "examples/public",
     "examples/market_data",
     "examples/order_management",
     "examples/position_management",
