--- a/examples/public/Cargo.toml
+++ b/examples/public/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "basic"
+name = "public"
 version = "0.1.0"
 edition = "2024"
 
@@ -9,4 +9,4 @@ deribit-http = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
 tracing-subscriber = { workspace = true }
-dotenv = "0.15.0"
+dotenv = { workspace = true }
