--- a/examples/private/Cargo.toml
+++ b/examples/private/Cargo.toml
@@ -2,3 +2,13 @@
 name = "private"
 version = "0.1.0"
 edition = "2024"
+
+
+[dependencies]
+deribit-http = { workspace = true }
+deribit-base = { workspace = true }
+tracing = { workspace = true }
+tokio = { workspace = true }
+tracing-subscriber = { workspace = true }
+dotenv = { workspace = true }
+chrono = { workspace = true }
