--- a/examples/public/Cargo.toml
+++ b/examples/public/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 
 [dependencies]
 deribit-http = { workspace = true }
+deribit-base = { workspace = true }
 tracing = { workspace = true }
 tokio = { workspace = true }
 tracing-subscriber = { workspace = true }
