--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "deribit-http"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
 authors = ["Joaquin Bejar <jb@taunais.com>"]
 description = "HTTP REST API client for Deribit trading platform"
@@ -28,17 +28,15 @@ base64 = { workspace = true }
 reqwest = { workspace = true }
 tokio = { workspace = true }
 thiserror = { workspace = true }
-url = { workspace = true }
 hmac = { workspace = true }
 sha2 = { workspace = true }
 urlencoding = { workspace = true }
-
+url = { workspace = true }
 
 
 [workspace.dependencies]
-deribit-base = { path = "../deribit-base" }
 deribit-http = { path = "." }
-#deribit-base = "0.1"
+deribit-base = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tracing = "0.1"
@@ -48,9 +46,9 @@ base64 = "0.22"
 reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
 tokio = { version = "1.0", features = ["full"] }
 thiserror = "2.0"
-url = "2.4"
 hmac = "0.12"
 sha2 = "0.10"
 urlencoding = "2.1"
 dotenv = "0.15"
 chrono = "0.4"
+url = "2.5"
