--- a/tests/integration/Cargo.toml
+++ b/tests/integration/Cargo.toml
@@ -8,19 +8,19 @@ publish = false
 name = "integration_tests"
 path = "./lib.rs"
 
+
+
 [dependencies]
-deribit-http = { path = "../.." }
+deribit-http = { workspace = true }
 deribit-base = { workspace = true }
 tokio = { workspace = true, features = ["full"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
-serde = { workspace = true }
 serde_json = { workspace = true }
-reqwest = { workspace = true }
-url = { workspace = true }
-chrono = { workspace = true }
 dotenv = { workspace = true }
 mockito = "1.7"
 assert-json-diff = "2.0"
 pretty_assertions = "1.4"
 serial_test = "3.2"
+url = "2.5.7"
+
