"Add dynamic expiry date calculation using `get_tomorrow_deribit_format`, refactor examples to leverage the new utility, and include `chrono` as a workspace dependency."

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ urlencoding = { workspace = true }
 url = { workspace = true }
 pretty-simple-display = { workspace = true }
 dotenv = { workspace = true }
+chrono = { workspace = true }
 
 [dev-dependencies]
 mockito = "1.7"
