--- a/examples/public/Cargo.toml
+++ b/examples/public/Cargo.toml
@@ -12,3 +12,4 @@ tokio = { workspace = true }
 serde = { version = "1.0.219", features = ["derive"] }
 pretty-simple-display = { workspace = true }
 serde_json = { workspace = true }
+chrono = { workspace = true }
