--- a/tests/integration/Cargo.toml
+++ b/tests/integration/Cargo.toml
@@ -17,5 +17,6 @@ tracing = { workspace = true }
 dotenv = { workspace = true }
 mockito = "1.7"
 serial_test = "3.2"
-url = "2.5.7"
+url = { workspace = true }
+serde_json = { workspace = true }
 
