--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "deribit-http"
-version = "0.4.0"
+version = "0.4.1"
 edition = "2024"
 authors = ["Joaquin Bejar <jb@taunais.com>"]
 description = "HTTP REST API client for Deribit trading platform"
@@ -54,7 +54,7 @@ hmac = "0.12"
 sha2 = "0.10"
 urlencoding = "2.1"
 dotenv = "0.15"
-chrono = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
 url = "2.5"
 pretty-simple-display = "0.1"
 tracing-subscriber = "0.3.20"
