feat: add WASM support for browser and Cloudflare Worker targets
- Add wasm feature flag with conditional dependencies
- Replace tokio::sync::Mutex with async_lock::Mutex for cross-platform support
- Replace tokio::time::sleep with futures_timer::Delay
- Add time_compat module for cross-platform Instant (std vs web-time)
- Add #[cfg] guards for native-only code (timeout, user_agent, env vars)
- Add WASM-specific implementations for ApiCredentials
- Add cross-platform logging with tracing-web for WASM targets
- Export setup_logger unconditionally from prelude
- Add .cargo/config.toml for getrandom WASM backend configuration
- Include Cloudflare Worker example demonstrating WASM usage

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,11 @@ members = [
     "tests/integration",
 ]
 
+[features]
+default = ["native"]
+native = ["tokio", "dotenv", "tracing-subscriber"]
+wasm = ["web-time", "tracing-web", "tracing-subscriber", "getrandom"]
+
 [dependencies]
 serde = { workspace = true }
 serde_json = { workspace = true }
@@ -25,20 +30,30 @@ tracing = { workspace = true }
 rand = { workspace = true }
 base64 = { workspace = true }
 reqwest = { workspace = true }
-tokio = { workspace = true }
 thiserror = { workspace = true }
 hmac = { workspace = true }
 sha2 = { workspace = true }
 urlencoding = { workspace = true }
 url = { workspace = true, features = ["serde"] }
 pretty-simple-display = { workspace = true }
-dotenv = { workspace = true }
 chrono = { workspace = true }
-tracing-subscriber = { workspace = true }
 serde_with = { workspace = true }
+async-lock = "3.4"
+futures-timer = "3.0"
+
+# Native-only dependencies
+tokio = { workspace = true, optional = true }
+dotenv = { workspace = true, optional = true }
+tracing-subscriber = { workspace = true, optional = true }
+
+# WASM-only dependencies
+web-time = { version = "1.1", optional = true }
+tracing-web = { version = "0.1", optional = true }
+getrandom = { version = "0.3", features = ["wasm_js"], optional = true }
 
 [dev-dependencies]
 mockito = "1.7"
+tokio = { workspace = true }
 
 [workspace.dependencies]
 deribit-http = { path = "." }
