ci: add WASM build and lint jobs to CI pipeline
Add build-wasm and lint-wasm Makefile targets, and corresponding
CI jobs to verify WASM compilation and linting for the wasm feature.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -41,3 +41,17 @@ jobs:
 
       - name: Lint
         run: make lint
+
+  lint_wasm:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          target: wasm32-unknown-unknown
+          components: clippy
+          override: true
+      - name: Lint WASM
+        run: make lint-wasm
