--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,3 +44,16 @@ jobs:
 
       - name: Build
         run: make build
+
+  build_wasm:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          target: wasm32-unknown-unknown
+          override: true
+      - name: Build WASM
+        run: make build-wasm
